梳理跳跃游戏和链表

--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -1,6 +1,6 @@
 # Hot100解题思路
 
-⭐️ 高频题
+⭐️ 代表高频题
 
 
 
@@ -8,7 +8,7 @@
 
 ### 两数之和，返回下标
 
-思路：哈希表  key值   value下标
+思路：哈希表`{值:对应下标}`    
 
 ```python
 def two_sum(nums, target):
@@ -64,7 +64,7 @@ return result
 
 思路：  
 
-1. k取余数组长度，得到真实翻转次数
+1. 确定真实轮转步数：k取余数组长度，得到真实翻转次数
 2. 整体翻转 + 左区间翻转+右区间翻转
 
 ```python
@@ -97,24 +97,20 @@ def rotate_array(nums, k):
 2. 第二次遍历，每步都更新当前区间内的最远下标，如果`当前下标`等于`当前区间最远下标`，则找到分割点
 
 ```python
-def partitionLabels(s: str):
-    # 第一次遍历，统计每个字符最后出现的下标
+def partitionLabels(s):
+    # 统计每个字符最后出现的下标
     last_index = {char:index for index, char in enumerate(s)}
     
     # 初始化变量
-    start = 0  # 当前区间的起始位置
-    end = 0    # 当前区间的最远位置
-    result = [] # 存储划分的结果
-    
-    # 第二次遍历，划分字符串
+    cur_start, cur_end = 0,0  # 当前区间的起始位置、最远位置
+    result = [] # 保存结果
     for i, char in enumerate(s):
         # 更新当前区间的最远位置
-        end = max(end, last_index[char])
-        
+        cur_end = max(cur_end, last_index[char])
         # 如果当前下标等于当前区间的最远位置，找到分割点
-        if i == end:
-            result.append(i-start+1)  # 记录区间长度
-            start = i+1  # 更新下一个区间的起始位置
+        if i == cur_end:
+            result.append(cur_end-cur_start+1)  # 记录区间长度
+            cur_start = i+1  # 更新下一个区间的起始位置
     return result
 ```
 
@@ -140,16 +136,18 @@ if not intervals:
 intervals.sort(key=lambda x: x[0])
 
 # 2. 逐步合并区间
-result = [intervals[0]]  # 初始化结果列表，首先加入第一个区间
+result = [intervals[0]]  # 初始化，加入第一个区间
 for i in range(1, len(intervals)):
     pre_left, pre_right = result[-1]  # 结果中的最后一个区间
     cur_left, cur_right = intervals[i]  # 当前区间
 
     # 判断是否重叠
-    if pre_right>=cur_left:  # 有重叠
-        result[-1] = [pre_left, max(pre_right, cur_right)]  # 合并区间
-    else:  # 没有重叠
-        result.append([cur_left, cur_right])  # 直接加入当前区间
+    if pre_right < cur_left: # 不重叠，新增区间
+        result.append([cur_left, cur_right]) 
+    elif cur_left < pre_right < cur_right: # 重叠,修改原区间
+        intervals[-1] = [pre_left,cur_right]
+    elif pre_right > cur_right: # 包含，过滤当前区间
+        continue        
 return result
 ```
 
@@ -157,21 +155,18 @@ return result
 
 ### 9. 翻转字符串里的单词 
 
-题目：给定一个字符串 s，逐个翻转字符串中的单词。单词之间由空格分隔，翻转后的单词顺序应与原来一致。
+题目：给定一个字符串 s，逐个翻转字符串中的单词。单词之间由空格分隔，翻转后的单词顺序应与原来一致。   举例输入"the sky is blue"	输出"blue is sky the"
 
-​	•	输入：s = "the sky is blue"
+ 思路： 
 
-​	•	输出："blue is sky the"
-
- 思路： 全部翻转，再翻转每个单词
+1. 拆分为单词列表
+2. 原地反转顺序
+3. 用空格连接
 
 ```python
-# 1. 去除首尾空格，并将字符串拆分为单词
-words = s.strip().split()  
-# 2. 反转单词顺序
-words.reverse()
-# 3. 将单词连接成一个字符串，单词之间用空格分隔
-return ' '.join(words)
+words = s.strip().split()   # 1.先拆分为单词   ['the', 'sky', 'is', 'blue']
+words.reverse() # 2.原地反转单词顺序   ['blue', 'is', 'sky', 'the']
+result=' '.join(words) # 3. 用空格连接成字符串 'blue is sky the'
 ```
 
 ### 10. 移动零：所有 0 移动到数组的末尾
@@ -193,13 +188,11 @@ def move_zeroes(nums):
 
 ### 11. 最长连续序列
 
-题目：未排序的整数数组 nums ，找出数字连续的最长序列
-
-（不要求序列元素在原数组中连续）      
+题目：未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）      
 
 思路：每个数判断是否为连续序列的开头。
 
-1. 跳过非开头：用set判断是否包含当前元素-1。 
+1. 跳过非开头：用set判断是否包含`当前元素-1`
 2. 判断递增：持续判断是否在集合里
 
 ```python
@@ -233,7 +226,7 @@ def longest_consecutive(nums):
 
 ### 12. 缺失的第一个正整数
 
-思路： 理想情况下 下标+1=正整数
+思路： 理想情况下  下标+1=正整数
 
 1. 交换：遍历到下标i,  如果值在1~n范围内，且与下标不匹配，需要持续交换。   
 
@@ -270,7 +263,7 @@ return len(nums)+1
 
 ### 1. 自身以外数组的乘积
 
-思路：前缀乘+后缀乘，不包含自身
+思路：不包含自身的前缀乘+后缀乘
 
 ### 2. 和为 K 的子数组
 
@@ -278,33 +271,24 @@ return len(nums)+1
 
 思路： 用前缀和+哈希表
 
-- 哈希表{前缀和: 出现次数}       
+- 哈希表{前缀和: 出现次数}  
 
-  初始化为{0:1}   表示前缀和为0出现了1次，避免漏掉从数组开头开始的子数组
-
-- `prefix[右]- 区间和k = prefix[左]`，则`prefix[左]`的次数即为所求
+- 如果`左前缀和 + k = 右前缀和`，那==左前缀和==的次数就满足条件
 
 ```python
  def subarray_sum(nums, k):
-    # 前缀和 和 哈希表
+    # 前缀和参数
     pre_sum = 0
-    pre_map = {0:1}  # 初始化，前缀和为0的出现次数为1
+    pre_map = {0:1}  # 初始化，前缀和为0的出现次数为1，避免漏掉从数组开头开始的子数组
     # 记录结果
     count = 0
-    
     for num in nums:
         pre_sum += num  # 更新当前前缀和
-        # 如果存在pre_sum - k，则说明有子数组和为k
         if pre_sum - k in pre_map.keys():
             count += pre_map[pre_sum-k]  # 累加次数
         # 每步都更新
 				pre_map[pre_sum] = pre_map.get(pre_sum, 0) + 1
     return count
-
-# 示例
-nums = [1, 2, 3]
-k = 3
-print(subarray_sum(nums, k))  # 输出：2
 ```
 
 ### ⭐️ 3. 接雨水
@@ -392,7 +376,7 @@ for i in range(len(matrix)):
         matrix[i][j],matrix[j][i]=matrix[j][i],matrix[i][j]
 # 每行逆序
 for i in range(len(matrix)):
-    matrix[i]=matrix[i][::-1] # 逆序
+    matrix[i].reverse()  # 原地逆序
 ```
 
 ## 排序
@@ -423,7 +407,7 @@ def sortColors(nums):
             left += 1
             mid += 1
         elif nums[mid] == 1: # 当前元素是1，无需交换，直接移动mid
-            mid += 1
+            mzid += 1
         elif nums[mid] == 2:  # 当前元素是2，交换到高位
             nums[mid],nums[right] = nums[right],nums[mid]
             right -= 1  # 不需要增加mid，因为交换后的元素还未被检查。
@@ -441,9 +425,7 @@ def findKthLargest(nums, k):
         left,right=2*i+1,2*i+2 # 左右孩子
         if left>=length and right>=length:  # 没有孩子，属于叶子结点
             return 
-	
-        # 合理区间内最大值下标  判断是否需要交换
-        max_index=i
+        max_index=i  # 合理区间内最大值下标  判断是否需要交换
         if left<length and nums[max_index]<nums[left]:  
             max_index=left
         if right<length and nums[max_index]<nums[right]:
@@ -503,26 +485,25 @@ def mergeKLists(lists):
 
 
 
-
 ## 链表
 
-### 1. 链表相交，求交点
+### 普通链表
+
+#### 1. 链表相交，求交点
 
 ![2024-12-24](./assets/2024-12-24.png)
 
 思路：
 
 1. 链表A走A+B路程，链表B走B+A路径。持续比较 两个节点。
-2. 终止条件是两个节点相等，中途相等则相交，都走完则不想交。
+2. 终止条件是两个节点相等，中途相等则相交，都走完 两者都为None则不想交。
 
 ```python
 def getIntersectionNode(headA, headB):
-      # A走A+B   B走B+A   持续比较两个链表的节点。 终止条件是相等。
-      # 如果相等时未走完，则相交   走完则不想交
       cur_A=headA
       cur_B=headB
 
-      while cur_A!=cur_B: # 相同节点 或都为None
+      while cur_A!=cur_B: # 终止条件 两个节点相同或都为None
           if cur_A:
               cur_A=cur_A.next
           else:
@@ -535,94 +516,7 @@ def getIntersectionNode(headA, headB):
       return cur_A
 ```
 
-
-
-### 2. 环形链表判断是否有环？环入口？
-
-![2024-12-24-2](./assets/2024-12-24-2.png)
-
-1. 快慢指针相遇，则有环。
-2. 相遇时，慢节点回到头节点，快慢指针同步走，再次相遇是入口
-
-```python
-# 链表是否有环
-def hasCycle(head):
-    slow = fast = head
-    while fast and fast.next:
-        slow = slow.next            # 慢指针每次走一步
-        fast = fast.next.next       # 快指针每次走两步
-        if slow == fast:            # 快慢指针相遇，说明有环
-            return True
-    return False                    # 如果快指针到达链表末尾，则没有环
-
-# 找到链表环的入口
-def detectCycle(head):
-    slow = fast = head
-    while fast and fast.next:
-        slow = slow.next
-        fast = fast.next.next
-        if slow == fast:  # 快慢指针相遇，链表有环
-            # 将慢指针移到链表头，快慢指针同步移动
-            slow = head
-            while slow != fast:
-                slow = slow.next
-                fast = fast.next
-            return slow  # 相遇点即为环的入口
-    
-    return None  # 如果链表没有环，返回 None
-```
-
-### 3. 翻转链表
-
-思路：3个指针  新链表表头new_node、旧链表当前节点cur_node、旧链表下一个节点next_node
-
-```python
-def reverseList(head):
-    new_node=None
-    cur_node=head
-    while cur_node:
-        next_node=cur_node.next
-        cur_node.next=new_node
-        new_node=cur_node
-        cur_node=next_node
-    return new_node
-```
-
-### 4. 回文链表
-
-思路：快慢指针找中点，翻转后半 再同时遍历两个链表
-
-```python
-def isPalindrome(head):
-    if not head or not head.next:
-        return True  # 空链表或单节点链表是回文链表
-    
-    # 快慢指针找中点
-    slow = fast = head
-    while fast and fast.next:
-        slow = slow.next
-        fast = fast.next.next
-    
-    # 翻转后半部分链表
-    new = None
-    while slow:
-        next_node = slow.next
-        slow.next = new
-        new = slow
-        slow = next_node
-    
-    # 比较前半部分和翻转后的后半部分
-    left_half = head
-    right_half = new
-    while right_half:  # 只需要比较后半部分
-        if left_half.val != right_half.val:
-            return False
-        left_half = left_half.next
-        right_half = right_half.next
-    return True
-```
-
-### ❓5. 链表模拟两数之和 
+### ❓2. 链表模拟两数之和 
 
 思路：少的链表高位为0、考虑进位
 
@@ -654,35 +548,152 @@ def addTwoNumbers(l1, l2):
     return dummy.next  # 返回虚拟头节点的下一个节点
 ```
 
+#### 3. 翻转链表
 
+思路：头插，三个节点  新链表表头new_node   旧链表当前节点cur_node    旧链表下一个节点next_node
 
-### 6. 删除倒数第N个节点
+```python
+def reverse_linked_list(head):
+    new_node = None  # 新链表的表头
+    cur_node = head  # 旧链表的表头
+
+    # 遍历链表，直到当前节点为空   
+    while cur_node:
+        next_node = cur_node.next 
+        cur_node.next = new_node 
+        new_node = cur_node 
+        cur_node = new_node 
+    return new_node  # 返回新的头节点
+```
+
+#### 4. 合并两个有序链表
+
+时间复杂度为 O(m + n)
+
+```python
+def merge_two_lists(l1, l2): # 归并排序
+    # 创建新链表
+    dummy = ListNode(0) # 虚拟头结点
+    cur_node = dummy  # 新链表表头
+
+    # 遍历两个链表，直到其中一个链表为空
+    while l1 and l2:
+        if l1.val < l2.val:
+            cur_node.next = l1
+            # 更新l1表头、新链表表头
+            l1 = l1.next 
+            cur_node = cur_node.next 
+        elif l1.val > l2.val:
+            # 更新l2表头、新链表表头
+            current.next = l2
+            l2 = l2.next 
+            cur_node = cur_node.next
+    # 剩余的节点接到新链表的末尾
+    if l1:
+        cur_node.next = l1
+    if l2:
+        cur_node.next = l2
+    return dummy.next  # 去掉虚拟头节点
+```
+
+### 快慢指针
+
+#### 1. 环形链表判断是否有环？环入口？
+
+![2024-12-24-2](./assets/2024-12-24-2.png)
+
+1. 快慢指针相遇，则有环。
+2. 相遇时，慢节点回到头节点，快慢指针同步走，再次相遇是入口
+
+```python
+# 链表是否有环
+def hasCycle(head):
+    slow,fast = head,head
+    while fast and fast.next:
+        slow = slow.next            # 慢指针每次走一步
+        fast = fast.next.next       # 快指针每次走两步
+        if slow == fast:            # 快慢指针相遇，说明有环
+            return True
+    return False                    # 如果快指针到达链表末尾，则没有环
+
+# 找到链表环的入口
+def detectCycle(head):
+    slow,fast = head,head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+        if slow == fast:  # 快慢指针相遇，链表有环
+            # 将慢指针移到链表头，快慢指针同步移动
+            slow = head
+            while slow != fast:
+                slow = slow.next
+                fast = fast.next
+            return slow  # 相遇点即为环的入口
+    
+    return None  # 如果链表没有环，返回 None
+```
+
+#### 2. 回文链表
+
+思路：快慢指针+链表翻转 
+（1）快慢指针找中点（2）翻转右区间，头插法（3）同步遍历两个链表
+
+```python
+def isPalindrome(head):
+    if not head or not head.next:
+        return True  # 空链表或单节点链表是回文链表
+    
+    # 快慢指针找中点
+    slow,fast = head,head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+    
+    # 翻转后半部分链表
+    new = None
+    while slow:
+        next_node = slow.next
+        slow.next = new
+        new = slow
+        slow = next_node
+    
+    # 比较前半部分和翻转后的后半部分
+    left_half = head
+    right_half = new
+    while right_half:  # 右半部分开始比较，可避免奇偶长度
+        if left_half.val != right_half.val:
+            return False
+        left_half = left_half.next
+        right_half = right_half.next
+    return True
+```
+
+#### 3. 删除倒数第N个节点
 
 思路：虚拟头结点+快慢指针
 
 ```python
 def removeNthFromEnd(head, n):
-    # 创建虚拟头节点
+    # 创建虚拟头节点， 如果删除的是第一个节点，可简化
     dummy = ListNode(0)
     dummy.next = head
-    fast = slow = dummy  # 快慢指针初始化为虚拟头节点
+    fast,slow = dummy,dummy  # 快慢指针初始化位置是虚拟头节点 
 
     # 快指针先走n步
     for _ in range(n):
         fast = fast.next
 
     # 快慢指针一起走，直到快指针到达链表的末尾
-    while fast.next:
+    while fast and fast.next:
         fast = fast.next
         slow = slow.next
 
-    # 删除倒数第N个节点
-    slow.next = slow.next.next
+    # 删除倒数第 N 个节点
+    if slow.next:  # 确保slow.next不为空
+        slow.next = slow.next.next
 
     return dummy.next  # 返回删除后的链表头节点
 ```
-
-
 
 ## 栈Stack
 
@@ -744,8 +755,6 @@ for i in range(1,len(temperatures)):  # 从第2天开始遍历
 return result
 ```
 
-
-
 #### ⭐️3. 柱状图中最大的矩形
 
 [视频讲解](https://www.bilibili.com/video/BV1Ns4y1o7uB?buvid=ZB4C53B2BBD061C34F8EB053DCC8271B5A7F&from_spmid=main.space-contribution.0.0&is_story_h5=false&mid=vFwLKO%2BwKIe1OV8Bmn8djA%3D%3D&plat_id=114&share_from=ugc&share_medium=iphone&share_plat=ios&share_session_id=63D630E1-0B89-43AD-9F25-8DCA15FA1DDB&share_source=WEIXIN&share_tag=s_i&timestamp=1735483510&unique_k=DGVdx3b&up_id=525438321&vd_source=867a12dbe5f2199cb2f7283321debf90)
@@ -757,8 +766,9 @@ return result
 def largestRectangleArea(heights):
     # 添加哨兵元素，避免处理边界情况
     heights = [0] + heights + [0]
-    max_area = 0
     stack = []  # 单调栈
+    max_area = 0 # 结果参数
+    
 
     for i in range(len(heights)):
         if len(stack) == 0: # 栈为空，当前元素直接入栈
@@ -773,8 +783,6 @@ def largestRectangleArea(heights):
             stack.append(i)  # 最后当前元素入栈
     return max_area
 ```
-
-
 
 ## 滑动窗口（左闭右开）
 
@@ -817,10 +825,10 @@ def minWindow(self, s: str, t: str) -> str:
    
     while right<len(s):  # right值尚未加入窗口，取值范围是0~n-1 
         # 1. 判断当前元素 
-        char=s[right] 
-        if char in need.keys():
-            window[char] = window.get(char, 0) + 1
-            if window[char] == need[char]:
+        cur_char=s[right] 
+        if cur_char in need.keys():
+            window[cur_char] = window.get(cur_char, 0) + 1
+            if window[cur_char] == need[cur_char]:
                  valid += 1 
         right+=1
         
@@ -831,11 +839,11 @@ def minWindow(self, s: str, t: str) -> str:
               	start=left
                 length=right-left
             # 5. 判断当前左侧元素是否移出窗口
-            char = s[left]
-            if char in need.keys():
-              	if window[char] == need[char]:
+            left_char = s[left]
+            if left_char in need.keys():
+              	if window[left_char] == need[left_char]:
                     valid-=1
-                window[char]-=1
+                window[left_char]-=1
             # 6. 收缩左边界
             left+=1
 		return "" if length==float("inf") else s[start: start + length]
@@ -882,7 +890,7 @@ def backtrack(nums):
     if  nums is None:
         return None
 
-    # 单层逻辑  找到中间位置，创建根节点
+    # 单层逻辑  中间位置创建根节点
     mid = len(nums) // 2
     root = TreeNode(nums[mid])
     root.left = backtrack(nums[:mid])  # 递归构建左子树
@@ -915,11 +923,11 @@ def buildTree(pre_order, in_order):
     root = TreeNode(root_val) #新树节点
 
     # 找到根节点在中序遍历中的下标  即为左子树节点数量
-    mid_idx = in_order.index(root_val)
+    left_nums = in_order.index(root_val)
 
     # 递归构建左子树和右子树
-    root.left = buildTree(pre_order[1:mid_idx + 1], in_order[:mid_idx])
-    root.right = buildTree(pre_order[mid_idx + 1:], in_order[mid_idx + 1:])
+    root.left = buildTree(pre_order[1: 1+left_nums], in_order[:left_nums])
+    root.right = buildTree(pre_order[1+left_nums:], in_order[left_nums+1:])
     return root
 ```
 
@@ -1122,7 +1130,6 @@ return result
 3. 单层递归逻辑： 当前位置变为海水，再递归淹没上下左右
 
 ```python
-# 岛屿数量
 def numIslands(self, grid):
   	def dfs(grid,i,j):
         # 终止条件 （1）上下左右四边越界 （2）当前已是海水
@@ -1131,11 +1138,10 @@ def numIslands(self, grid):
         if grid[i][j]=="0": 
             return 
         grid[i][j]="0" # 淹没当前位置，再递归淹没淹没上下左右
-        self.dfs(grid,i-1,j)
-        self.dfs(grid,i+1,j)
-        self.dfs(grid,i,j-1)
-        self.dfs(grid,i,j+1)
-    
+        dfs(grid,i-1,j)
+        dfs(grid,i+1,j)
+        dfs(grid,i,j-1)
+        dfs(grid,i,j+1)
     
     res=0  # 岛屿数量初始化为0
     for i in range(len(grid)):# 遍历grid
@@ -1280,7 +1286,7 @@ dp[i]= max(dp[i-2]+nums[i], dp[i-1])
 
 #### 4. 最大子数组的和
 
-- 定义：  dp[i] 表示以==第 i 个元素结尾==的最大子数组和。
+- 定义：  dp[i] 表示以==第 i 个元素结尾==的最大子数组和
 - 递推公式  `dp[i]= max(nums[i], dp[i-1]+nums[i])`
 
 ```python
