--- a/解题方法论.md
+++ b/解题方法论.md
@@ -220,7 +220,7 @@ def merge_and_process(nums1, nums2):
         if nums1[i] < nums2[j]:
             merged.append(nums1[i])
             i += 1
-        else:
+        elif nums1[i] > nums2[j]:
             merged.append(nums2[j])
             j += 1
     merged.extend(nums1[i:]) # nums1可能剩余，追加
@@ -269,66 +269,19 @@ def merge_and_process(nums1, nums2):
 
 ## 链表
 
-核心解法：（1）快慢指针 （2）虚拟头结点  
+核心解法：（1）快慢指针 （2）虚拟头结点
 
-### 1. 插入元素
+### 1. 头插法/尾插法4步骤
 
-#### 尾插
+| ⭐️头插                                                        | 尾插                                                         |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 1. 旧链表保存下一个节点 <br />2. 旧链表当前节点指向新链表头  <br />3. 更新新链表表头 <br />4. 更新旧链表表头 | 1. 旧链表保存下一个节点 <br />2. ==旧指None，新指旧== <br />3. 更新新链表表尾 <br />4. 更新旧链表表头 |
 
-1. 保存下一个节点
-2. 尾插      旧指None    新指旧
-3. 新表更新尾节点
-4. 旧表更新头结点
+### 2. 快慢指针
 
-### 2. 翻转链表
-思路：三个节点  新链表表头new_node   旧链表当前节点cur_node    旧链表下一个节点next_node
-
-1. 保存旧链表下一个节点
-2. 旧链表当前节点指向新链表头 
-3. 更新新链表表头
-4. 更新旧链表表头
-
-```python
-def reverse_linked_list(head):
-    new_node = None  # 新链表的表头
-    cur_node = head  # 旧链表的表头
-
-    # 遍历链表，直到当前节点为空   
-    while cur_node:
-        next_node = cur_node.next 
-        cur_node.next = new_node 
-        new_node = cur_node 
-        cur_node = new_node 
-    return new_node  # 返回新的头节点
-```
-
-### 3. 合并两个有序链表
-
-时间复杂度为 O(m + n)
-
-```python
-def merge_two_lists(l1, l2): # 归并排序
-    # 创建新链表
-    dummy = ListNode(0) # 虚拟头结点
-    cur_node = dummy  # 新链表表头
-
-    # 遍历两个链表，直到其中一个链表为空
-    while l1 and l2:
-        if l1.val < l2.val:
-            cur_node.next = l1
-            l1 = l1.next  # 更新l1表头
-            cur_node = cur_node.next # 更新新链表表头
-        elif l1.val > l2.val:
-            current.next = l2
-            l2 = l2.next  # 更新l2表头
-            cur_node = cur_node.next # 更新新链表表头
-    # 剩余的节点接到新链表的末尾
-    if l1:
-        cur_node.next = l1
-    if l2:
-        cur_node.next = l2
-    return dummy.next  # 去掉虚拟头节点
-```
+| 题目                                                         | 快慢指针同步走的遍历条件 |
+| ------------------------------------------------------------ | ------------------------ |
+| 1. 链表是否有环、环入口<br />2. 回文链表<br />3. 删除倒数第N个节点 | while fast and fast.next |
 
 ## 二叉树
 
@@ -369,38 +322,37 @@ return result
 [层序遍历](https://www.programmercarl.com/0102.%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86.html#_102-%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E5%B1%82%E5%BA%8F%E9%81%8D%E5%8E%86)
 
 1. 初始化队列deque ,装入根节点
-2. 遍历当前层，记录并装入左右孩子
-4. 装入当前层所有节点
+2. 遍历当前层，记录值并装入左右孩子
+4. 保存当前层所有结果
 
 ```python
-class Solution:
-    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
-        # 边界条件   空树
-        if root is None:
-            return []
-        dq = collections.deque([root]) # 1. 初始化队列，装入根节点
-        result = [] # 保存结果
-        while dq: 
-            level = [] 
-            for _ in range(len(dq)):   # 2. 遍历当前层，记录并装入左右孩子
-                cur_node = dq.popleft() 
-                level.append(cur_node.val)
-                if cur_node.left: 
-                    dq.append(cur_node.left)
-                if cur_node.right:
-                    dq.append(cur_node.right)
-            result.append(level) # 3. 保存当前层结果
-        return result
+def levelOrder(root):
+    # 边界条件   空树
+    if root is None:
+        return []
+    dq = collections.deque([root]) # 1. 初始化队列，装入根节点
+    result = [] # 保存结果
+    while dq: 
+        level = [] 
+        for _ in range(len(dq)):   # 2. 遍历当前层，记录并装入左右孩子
+            cur_node = dq.popleft() 
+            level.append(cur_node.val)
+            if cur_node.left: 
+                dq.append(cur_node.left)
+            if cur_node.right:
+                dq.append(cur_node.right)
+        result.append(level) # 3. 保存当前层结果
+    return result
 ```
 
 ## 回溯
 
 ### 1. 回溯三步骤
 
-1. 确定传参
+1. 参数
    
-2. 确定终止条件   保存结果时==path必须复制==
-3. 单层逻辑   **明确 **横向for遍历什么、递归纵向遍历什么
+2. 终止条件   保存结果时==path必须复制==
+3. 单层递归逻辑   **明确 **横向for遍历什么、纵向递归遍历什么
 
 |      | 局部参数                           | 终止条件                                  | 横向                                                         | 纵向                                                   |
 | ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------ |
@@ -450,6 +402,8 @@ return result
 
 ### （3）切割 
 
+题目：分割回文子串
+
 ### （4）排列有序
 
 需要穷举元素的位置  用**used**标记还可以选择哪些元素
@@ -483,12 +437,12 @@ Tips:
 1. 无固定套路，千题千法，故不要死磕数学证明。 
 2. 思路：想清楚局部最优，想清楚全局最优，感觉可以推出，且想不出反例
 
-### 2. 跳跃游戏
+### 1. 跳跃游戏
 
-|                | 思路                   | 参数                                                         | 终止条件                                      |
-| -------------- | ---------------------- | ------------------------------------------------------------ | --------------------------------------------- |
-| 是否能到达     | 持续更新==最远下标==   | cur_index 当前最远下标                                       | （1）已越界（2）能到达                        |
-| 到达的最少步数 | ==最少步数==走最远范围 | cur_index 当前最远下标<br />next_index 多跳一次的最远下标<br />step 记录结果 | （1）next_index已越界（2）cur_index当前能到达 |
+|                | 思路                   | 参数                                                         | 终止条件                                                    |
+| -------------- | ---------------------- | ------------------------------------------------------------ | ----------------------------------------------------------- |
+| 是否能到达     | 持续更新==最远下标==   | cur_index 当前最远下标                                       | （1）已越界（2）能到达                                      |
+| 到达的最少步数 | ==最少步数==走最远范围 | cur_index 当前最远下标<br />next_index 多跳一次的最远下标<br />step 记录结果 | （1）==next_index==已越界<br />（2）==cur_index==当前能到达 |
 
 #### （1）跳跃游戏
 
@@ -512,7 +466,7 @@ def jump(nums):
 
 1. 终止条件 （1）已越界 （2）能到达
 2. 更新下步最远下标
-3. 是否增加步数
+3. 更新步数
 
 ```python
 def jump(nums):
@@ -525,7 +479,7 @@ def jump(nums):
     step=0
 
     for i in range(len(nums)):
-        # 1. 终止条件 （1）已越界   （2）能到达
+        # 1. 终止条件 （1）next_index已越界   （2）cur_index能到达
         if i>next_index:
             return -1
         if cur_index>=len(nums)-1:
@@ -571,9 +525,9 @@ def jump(nums):
 
 |                  | dp定义                                                     | 递推公式                                                     |
 | ---------------- | ---------------------------------------------------------- | ------------------------------------------------------------ |
-| 最短编辑距离     | `dp[i][j]` word1前i个字符   word2前j个字符的最小编辑距离   |                                                              |
-| 最长公共子序列   | `dp[i][j]`  text1前i个字符，text2前j个字符的最长公共子序列 | 当前字符相同，则`dp[i][j] = dp[i-1][j-1]+1` <br />当前字符不同，则`dp[i][j] = max(dp[i-1][j], dp[i][j-1])` |
-| 最长连续递增序列 | `dp[i]` 以==第i个元素结尾==的最长递增子序列的长度          |                                                              |
+| 最短编辑距离     | `dp[i][j]` text1前i个字符，text2前j个字符的最小编辑距离    | 当前元素相同，则`dp[i-1][j-1]`<br />当前元素不同，则<br />- 删除/新增  `min(dp[i-1][j],dp[i][j-1])+1`<br />- 修改   `dp[i-1][j-1]+1` |
+| 最长公共子序列   | `dp[i][j]`  text1前i个字符，text2前j个字符的最长公共子序列 | 当前元素相同，则`dp[i-1][j-1]+1` <br />当前元素不同，则`max(dp[i-1][j], dp[i][j-1])` |
+| 最长连续递增序列 | `dp[i]` 以==第i个元素结尾==的最长递增子序列的长度          | 当`nums[i]>nums[j]`   `max(dp[i], dp[j] + 1)`    <br />j取值0~i-1 |
 | 最长回文子串     | 用双指针解决                                               |                                                              |
 
 
