--- a/解题方法论.md
+++ b/解题方法论.md
@@ -129,9 +129,9 @@ min_value=float("inf") # 记录最小值
 while left<=right:
     mid=(left+right)//2
     min_value = min(min_value,nums[mid])  # 持续更新最小值
-    if nums[mid]>nums[right]: # 右边界无序
+    if nums[mid]>nums[right]: # 右区间无序
         left=mid+1
-    elif nums[mid]<nums[right]: # 左边界无序
+    elif nums[mid]<nums[right]: # 左区间无序
         right=mid-1
     elif nums[mid]==nums[right]: 
         right-=1  # 无法判断，缩小右边界
