--- a/hot100解题思路.md
+++ b/hot100解题思路.md
@@ -383,7 +383,7 @@ for i in range(len(matrix)):
 
 ### 快速排序
 
-#### ❓1. 颜色分类
+#### 1. 颜色分类
 
 题目：给定一个包含 n 个元素的整数数组 nums，其中每个元素的值为 0、1 或 2，分别表示三种颜色。最终使得相同颜色的元素相邻，并且按 0、1、2 的顺序排列。
 
@@ -392,22 +392,31 @@ for i in range(len(matrix)):
 输出：[0, 0, 1, 1, 2, 2]
 ```
 
-思路：三路快排，即三个指针，划分为左右区间，左区间有序 ==left mid==，右区间无序==right==，因为尚未遍历。
+思路： 三路快排3步骤
 
-- left数组开头，维护区间0    
-- mid遍历数组      
-- right数组末尾，维护区间2
+1. 初始化参数    三个指针 left, mid = 0, 0    right=n-1
+  - left开头维护区间0   mid维护区间1、right末尾维护区间2
+  - 三路快排，划分为左右区间，==[left,mid]==左区间有序，==[mid,right]==右区间无序（因为尚未遍历）
+
+2. 遍历条件：mid<=right
+
+3. 三种情况
+  - nums[mid]==0    left⇔mid交换元素，left+1、mid+1
+  - num[mid]==1     无需交换， mid+1
+  - Nums[mid]==2   mid⇔right交换元素，right-1缩小右边界
+
 
 ```python
 def sortColors(nums):
-    left, mid, right = 0, 0, len(nums)-1
+    left, mid = 0, 0
+    right=len(nums)-1
     while mid <= right: # 遍历的终止条件 mid右移，right左移，两者相遇停止
         if nums[mid] == 0:  # 当前元素是0，交换到低位
             nums[mid],nums[left]= nums[left],nums[mid]
             left += 1
             mid += 1
         elif nums[mid] == 1: # 当前元素是1，无需交换，直接移动mid
-            mzid += 1
+            mid += 1
         elif nums[mid] == 2:  # 当前元素是2，交换到高位
             nums[mid],nums[right] = nums[right],nums[mid]
             right -= 1  # 不需要增加mid，因为交换后的元素还未被检查。
